--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/springboot-docker-app:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/cicdpipeline:latest .
 
       - name: Push Docker Image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/springboot-docker-app:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/cicdpipeline:latest
